--- a/Health Watch/Health Watch.csproj
+++ b/Health Watch/Health Watch.csproj
@@ -82,6 +82,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\HW Bromley and Lewisham.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\HW_Pattern.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
